<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="EventLevel" Id="{ca81352f-d08f-465b-acbe-efc11506cc1d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE EventLevel :
(
	INFO := 0,
  WARNING,
  ERROR
) BYTE := INFO;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>